Single essay: add jump to ref links to the refs in content to avoid scrolling up on smaller screens

--- a/gatsby/src/styles/pages/_single-essay.scss
+++ b/gatsby/src/styles/pages/_single-essay.scss
@@ -221,6 +221,10 @@
                 font-size: 0.8em;
                 font-weight: 400;
                 scroll-margin-top: $header--height + 5px;
+
+                button {
+                    cursor: pointer;
+                }
             }
 
             ul, ol {
@@ -350,6 +354,7 @@
             display: grid;
             grid-template-columns: 1.4em 1fr;
             font-weight: 400;
+            scroll-margin-top: $header--height;
 
             &__text {
                 p {
